<resources xmlns:tools="http://schemas.android.com/tools" >
    <string name="app_name">xinya</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="footer_finish">加载完成</string>
    <string name="footer_failed">加载失败</string>
    <string name="footer_loading">正在加载...</string>
    <string name="footer_nothing">已加载全部内容</string>
    <string name="header_refreshing">正在加载...</string>
    <string name="header_failed">刷新失败</string>
    <string name="header_update">\'最后更新\' M-d HH:mm</string>
    <string name="header_finish">刷新完成</string>
    <string name="header_loading">加载等待...</string>
    <string name="header_pulling">下拉刷新</string>
    <string name="header_release">释放刷新</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="gpsNotifyMsg">当前应用需要打开定位功能。\n\n请点击\"设置\"-\"定位服务\"-打开定位功能。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="jiedan">接单人</string>
</resources>
