<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/item_red_title" />

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/s_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.scwang.smartrefresh.layout.header.ClassicsHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srlTextFailed="@string/header_failed"
            app:srlTextFinish="@string/header_finish"
            app:srlTextLoading="@string/header_loading"
            app:srlTextPulling="@string/header_pulling"
            app:srlTextRefreshing="@string/header_refreshing"
            app:srlTextRelease="@string/header_release"
            app:srlTextUpdate="@string/header_update" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/item_circular_bead"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="全部" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/item_circular_bead"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="好友" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/item_circular_bead"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/white"
                    android:text="发货人" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/item_circular_bead"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:paddingRight="10dp"
                    android:text="团队" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/item_circular_bead"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="商铺" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/hui"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="好友列表" />

            <RelativeLayout
                android:id="@+id/rl_friend"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/ic_img" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="50dp"
                    android:gravity="center_vertical"
                    android:text="大壮" />
            </RelativeLayout>

        </LinearLayout>

        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srlTextFailed="@string/footer_failed"
            app:srlTextFinish="@string/footer_finish"
            app:srlTextLoading="@string/footer_loading"
            app:srlTextNothing="@string/footer_nothing" />
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</LinearLayout>
